feat: Initial setup to run loadtest with Java 24, ref: NOISSUE